<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="singapore_description">Singapore, officially the republic of Singapore,
        and often referred to as the Lion City, the Garden City , and the Red Dot, is a global city
        in Southeast Asia and the world\'s only island city-state.
        It lies one degree (137km) north of the equator, at the southernmost tip of the continental
        Asia and peninsula Malaysia, with Indonesia\'s Riay Islands to the south. Singapore\'s
        territory consists of the diamond-shaped main island and 62 islets.
    </string>
    <string name="placeholder">Placeholder</string>
    <string name="fab_content_description">Star FAB</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">f/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Type 240</string>
    <string name="singapore">Singapore</string>
</resources>